--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.2.3",
     "@astrojs/tailwind": "^6.0.0",
+    "@types/react": "^19.1.1",
+    "@types/react-dom": "^19.1.2",
     "astro": "^5.3.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "tailwindcss": "^3.4.17"
   }
 }
